# nccl-eBPF

./: .gitignore  .gitmodules  CLAUDE.md  README.md
docs/: cross-boundary-ebpf-plan.md  europar-paper-plan.md  eval-plan-b300.md  paper-draft.md  paper-outline.md
docs/paper/: Makefile  paper.tex  references.bib
docs/paper/figures/: architecture.tex  closed_loop.tex  contention_timeseries.tex  gpu_latency.tex  hot_reload_timeline.tex  overhead_staircase.tex  verifier_matrix.tex
docs/tmp/: 3rank-experiment.md  3rank-policy-experiment.md  abstract-draft.md  allgather-default-vs-simple.md  beats-default-strategies.md  benchmark-latency.csv  benchmark-results.md  bpftime-api-research.md  bpftime-eim-research.md  bpftime-migration-results.md  citation-audit.md  collective-sweep.md  composability-experiment.md  composability-v2-experiment.md  default-suboptimal-search-2.md  default-suboptimal-search.md  doc-cleanup-results.md  eval-gap-analysis.md  eval-improvement-results.md  eval-improvement-test-output.txt  experiment-results-b300.md  final-paper-sweep.md  gpu-ebpf-related-work.md  interference-experiment-summary.md  multijob-interference-summary.md  nccl-default-suboptimal-research.md  nccl-default-suboptimal-v2.md  nccl-plugin-api-analysis.md  nccl-plugin-exploration.md  net-plugin-experiment.md  p1-mixed-workload-experiment.md  p1-mixed-workload-v2.md  p2-default-vs-optimal-sweep.md  p2-proto-bandwidth-experiment.md  p2-shm-transport-experiment.md  p3-allgather-reducescatter-sweep.md  p3-broadcast-proto-sweep.md  p3-policy-vs-default-experiment.md  paper-eval-review.md  paper-final-experiments.md  (+34 more)
src/ebpf-policies/: adaptive_channels.bpf.c  adaptive_channels_v2.bpf.c  bad_channels.bpf.c  bad_div_zero.bpf.c  bad_infinite_loop.bpf.c  bad_lookup.bpf.c  bad_oob_access.bpf.c  bad_stack_overflow.bpf.c  bad_unregistered_helper.bpf.c  bad_write_ctx.bpf.c  bpf_compat.h  cpu_aware.bpf.c  lookup_only.bpf.c  lookup_update.bpf.c  noop.bpf.c  nvlink_ring_mid.bpf.c  nvlink_ring_mid_v2.bpf.c  policy_action.h  policy_context.h  policy_maps.h  ring_simple_all.bpf.c  size_aware.bpf.c  size_aware_v2.bpf.c  size_aware_v3.bpf.c  size_aware_v4.bpf.c  size_aware_v5.bpf.c  slo_enforcer.bpf.c
src/kernel_observer/: Makefile  load.sh  nccl_cpu_observer.bpf.c  nccl_cpu_observer.h  test_e2e.sh
src/nccl-net-ebpf-plugin/: CMakeLists.txt  README.md  net_ebpf_ctx.h  net_trace.bpf.c  plugin.cpp  plugin_paths.h.in
src/nccl-policy-plugin/: CMakeLists.txt  README.md  native_baseline.cpp  native_baseline.h  plugin.cpp
src/nccl-policy-plugin/test/: native_crash_plugin.c  policy_test_paths.h.in  test_ebpf_plugin.c  test_native_crash.c
